--- a/CheckPricesote45.ui
+++ b/CheckPricesote45.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>603</height>
    </rect>
   </property>
   <property name="font">
@@ -181,7 +181,7 @@
       <x>10</x>
       <y>160</y>
       <width>771</width>
-      <height>241</height>
+      <height>271</height>
      </rect>
     </property>
     <property name="font">
@@ -306,14 +306,50 @@
       </property>
      </column>
     </widget>
+    <widget class="QPushButton" name="pushButton_3">
+     <property name="geometry">
+      <rect>
+       <x>690</x>
+       <y>240</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Verdana</family>
+      </font>
+     </property>
+     <property name="text">
+      <string>Importar</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_4">
+     <property name="geometry">
+      <rect>
+       <x>590</x>
+       <y>240</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Verdana</family>
+      </font>
+     </property>
+     <property name="text">
+      <string>Atualizar</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>410</y>
+      <y>440</y>
       <width>771</width>
-      <height>181</height>
+      <height>161</height>
      </rect>
     </property>
     <property name="font">
@@ -330,7 +366,7 @@
        <x>10</x>
        <y>20</y>
        <width>751</width>
-       <height>141</height>
+       <height>121</height>
       </rect>
      </property>
     </widget>
